WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213239
[Win] Mouse dragging tests are failing because WebKitTestRunner dispatches WM_MOUSELEAVE to the hidden WebView
https://bugs.webkit.org/show_bug.cgi?id=213239
Summary
[Win] Mouse dragging tests are failing because WebKitTestRunner dispatches WM...
Fujii Hironori
Reported
2020-06-16 00:58:22 PDT
[Win] Mouse dragging tests are failing because WebKitTestRunner dispatches WM_MOUSELEAVE to the hidden WebView WinCairo WebKit2 WebKitTestRunner is failing some layout tests which are using mouse dragging events. For example, fast/text/international/hebrew-selection.html
Attachments
Patch
(3.74 KB, patch)
2020-06-16 01:10 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-06-16 01:10:24 PDT
Created
attachment 401987
[details]
Patch
Fujii Hironori
Comment 2
2020-06-16 12:50:27 PDT
Comment on
attachment 401987
[details]
Patch Clearing flags on attachment: 401987 Committed
r263110
: <
https://trac.webkit.org/changeset/263110
>
Fujii Hironori
Comment 3
2020-06-16 12:50:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-06-16 12:51:19 PDT
<
rdar://problem/64418074
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug